--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -18,8 +18,8 @@
 //page parts
 @import "partials/header";
 @import "partials/menu";
+@import "partials/product";
 @import "partials/page";
-@import "partials/_product.scss";
 @import "partials/sidebar";
 @import "partials/footer";
 
