--- a/src/sass/modules/_utilities.scss
+++ b/src/sass/modules/_utilities.scss
@@ -40,6 +40,14 @@ img.g-full-width{clear:both;display:block;width:100%;height:auto;margin:0 0 0 0;
 .g-img-centered{
     @include img-centered;
 }
+
+.g-column{
+    float:left;
+    width:100%;
+    min-height:1px;
+    padding:0 15px;
+}
+
 .g-video-wrap {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
