--- a/src/sass/partials/_page.scss
+++ b/src/sass/partials/_page.scss
@@ -2,7 +2,11 @@
 
 @import "page/_breadcrumbs.scss";
 @import "page/_title.scss";//заголовки
+@import "page/_service-list.scss";//список услуг
+@import "page/_advantages.scss";//преимущества
+@import "page/_news-list.scss";//последние новости (колонки)
 @import "page/_slider.scss";
+
 @import "page/_scroll-up.scss";
 
 
