Home page created

--- a/src/sass/modules/_base.scss
+++ b/src/sass/modules/_base.scss
@@ -16,7 +16,7 @@ $text-color-light:#847c80;
 $border-color:#c2c2c2;
 $primary:#ffb6c1;
 $primary-text-color:#ee7a83;
-$title-color:$primary;
+$title-color:$primary-text-color;
 $primary-alt:#a7bc4d;
 $primary-alt-light:#bcd54f;
 
