--- a/src/sass/partials/_menu.scss
+++ b/src/sass/partials/_menu.scss
@@ -2,3 +2,4 @@
 @import "menu/_header-menu.scss";
 @import "menu/_desktop-menu.scss";
 @import "menu/_mobile-menu.scss";
+@import "menu/_footer-menu.scss";
