--- a/src/sass/modules/_main.scss
+++ b/src/sass/modules/_main.scss
@@ -33,9 +33,10 @@ body{
 }
 
 .page__content{
-    padding:15px 0;
+    padding:15px 0 50px;
     @include font-size($project-font-size);
     line-height:strip-units($project-line-height/$project-font-size);
+    background:url(../img/page-bg.png) left bottom repeat-x;
 }
 
 /* Typography*/
@@ -48,22 +49,32 @@ h1, h2, h3, h4, h5, h6, .g-title, .g-subtitle{
 }
 .g-title{
     display:block;
-    @include font-size(2*$project-font-size);
+    @include font-size(32px);
 }
 
 .g-subtitle{
     display:block;
-    @include font-size(1.5*$project-font-size);
+    @include font-size(24px);
 }
 
 .g-brand-color{
-    color:$primary;
+    color:$primary-text-color;
 }
 
 b, strong{
     font-weight:700;
 }
 
+
+.g-text-color-link{
+    color:$text-color;
+    text-decoration:underline;
+    &:hover,
+    &:active,
+    &:focus{
+        color:$primary-text-color;
+    }
+}
 
 
 
