--- a/src/sass/partials/_page.scss
+++ b/src/sass/partials/_page.scss
@@ -5,6 +5,7 @@
 @import "page/_service-list.scss";//список услуг
 @import "page/_advantages.scss";//преимущества
 @import "page/_news-list.scss";//последние новости (колонки)
+@import "page/_seo.scss";//SEO-блок
 @import "page/_slider.scss";
 
 @import "page/_scroll-up.scss";
