--- a/src/sass/partials/page/_scroll-up.scss
+++ b/src/sass/partials/page/_scroll-up.scss
@@ -4,14 +4,14 @@
     width:50px;
     height:50px;
     line-height:50px;
-    color:$primary;
-    background-color:#ddd;
+    color:$primary-text-color;
+    background-color:#c4b4b6;
     text-align:center;
     vertical-align:middle;
     outline:none;
     @include font-size(24px);
     position:fixed;
-    right:5px;
+    right:15px;
     bottom:5px;
     opacity:.5;
     @include transition(.3s opacity);
