--- a/src/sass/partials/page/_advantages.scss
+++ b/src/sass/partials/page/_advantages.scss
@@ -2,7 +2,7 @@
 /*Advantages Section*/
 .b-advantages{
     padding:52px 0;
-    margin-bottom:75px;
+    margin:75px 0;
     border:1px solid #eee;
     border-radius:$border-radius;
     box-shadow:0 5px 1px rgba($primary, .6), inset 0 0 1px rgba(#000, .2);
