--- a/src/sass/partials/page/_news-list.scss
+++ b/src/sass/partials/page/_news-list.scss
@@ -12,26 +12,28 @@
 }
 .news-list__inner{
     max-width:370px;
-    margin:25px auto 0;
+    margin:0 auto;
     border:1px solid #eee;
     border-radius:$border-radius;
     box-shadow:0 5px 1px rgba($primary, .6), inset 0 0 1px rgba(#000, .2);
     background:#fff;
-    position:relative;
+    //position:relative;
 
-    &:before{
-        content:'';
-        display:block;
-        padding-top:56%;//карман для картинки, к которой применим svg clip-path
-    }
+    //&:before{
+        //content:'';
+        //display:block;
+        //padding-top:56%;//карман для картинки, к которой применим svg clip-path
+    //}
 }
 .news-list__thumb{
     display:block;
+    margin-bottom:10px;
     background:#bbb;
-    position:absolute;
-    left:0;
-    top:-50px;
-    width:100%;
+    //position:absolute;
+    position:relative;
+    //left:0;
+    //top:-50px;
+    //width:100%;
 
     &:after{
         content:'';
