Header links hover effect changed

--- a/src/sass/partials/header/_header-main.scss
+++ b/src/sass/partials/header/_header-main.scss
@@ -74,7 +74,6 @@
     &:hover,
     &:active,
     &:focus{
-        color:$primary;
-        text-decoration:none;
+        color:$primary-text-color;
     }
 }
