--- a/src/sass/modules/_main.scss
+++ b/src/sass/modules/_main.scss
@@ -34,6 +34,7 @@ body{
 
 .page__content{
     padding:15px 0 50px;
+    min-height:500px;
     @include font-size($project-font-size);
     line-height:strip-units($project-line-height/$project-font-size);
     background:url(../img/page-bg.png) left bottom repeat-x;
@@ -45,16 +46,16 @@ h1, h2, h3, h4, h5, h6, .g-title, .g-subtitle{
   @include px2rem(margin-bottom, 1.4*$project-line-height);
   line-height:1.1;
   color:$title-color;
-  font-weight:700;
+  font-weight:400;
 }
 .g-title{
     display:block;
-    @include font-size(32px);
+    @include font-size(28px);
 }
 
 .g-subtitle{
     display:block;
-    @include font-size(24px);
+    @include font-size(18px);
 }
 
 .g-brand-color{
