--- a/src/sass/partials/page/_title.scss
+++ b/src/sass/partials/page/_title.scss
@@ -1,5 +1,65 @@
 ﻿@import "../../modules/_base.scss";
 /*Page Titles*/
+h1, h2, h3, h4, h5, h6, .g-title, .g-subtitle{
+  margin-top: 0;
+  @include px2rem(margin-bottom, 1.4*$project-line-height);
+  line-height:1.1;
+  color:$title-color;
+  font-weight:400;
+}
+.g-title{
+    display:block;
+    @include font-size(28px);
+}
+
+.g-subtitle{
+    display:block;
+    @include font-size(18px);
+}
+
+.g-title--line{
+    position:relative;
+    z-index:1;
+    &:before,
+    &:after{
+        content:'';
+        display:block;
+        width:100%;
+        position:absolute;
+        left:0;
+        height:1px;
+        background:#eee;
+        z-index:-1;
+    }
+
+    &:before{
+        top:17px;
+    }
+
+    &:after{
+        top:19px;
+    }
+}
+
+.g-title__inner{
+    display:inline-block;
+    padding-right:10px;
+    position:relative;
+    z-index:1;
+
+    &:before{
+        content:'';
+        display:block;
+        width:100%;
+        height:6px;
+        position:absolute;
+        left:0;
+        top:16px;
+        background:url(../img/pattern.png) repeat-x;
+        z-index:-1;
+    }
+}
+
 .page__title{
     display:block;
     width:210px;
@@ -14,3 +74,5 @@
     text-transform:uppercase;
     text-align:center;
 }
+
+
