Catalog sorter block added

--- a/src/sass/partials/_product.scss
+++ b/src/sass/partials/_product.scss
@@ -2,3 +2,4 @@
 
 @import "product/_rating.scss";
 @import "product/_product-list.scss";//вывод продуктов в каталоге
+@import "product/_sorter.scss";//блок Заголовок страницы + сортировка товаров
