--- a/src/sass/modules/_main.scss
+++ b/src/sass/modules/_main.scss
@@ -21,7 +21,8 @@ html{
     height:100%;
 }
 
-body{
+
+.page{ //body class
     min-height:100%;
     line-height: 1;
     font-family: "Open Sans", Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;
