--- a/src/sass/partials/_menu.scss
+++ b/src/sass/partials/_menu.scss
@@ -3,3 +3,4 @@
 @import "menu/_desktop-menu.scss";
 @import "menu/_mobile-menu.scss";
 @import "menu/_footer-menu.scss";
+@import "menu/_sidebar-menu.scss";
