--- a/src/sass/partials/_sidebar.scss
+++ b/src/sass/partials/_sidebar.scss
@@ -1,3 +1,4 @@
 ﻿@import "../modules/_base.scss";
 
-@import "sidebar/_sidebar-item.scss";
+@import "sidebar/_sidebar-panel.scss";
+@import "sidebar/_priceslider.scss";
