--- a/src/sass/partials/product/_sorter.scss
+++ b/src/sass/partials/product/_sorter.scss
@@ -2,7 +2,7 @@
 /*Catalog Sorter*/
 .b-sorter{
     @extend .g-clearfix;
-    margin:0 -15px;
+    margin:0 -15px 25px;
 }
 .b-sorter__title,
 .b-sorter__inner{
