--- a/src/sass/partials/product/_product-list.scss
+++ b/src/sass/partials/product/_product-list.scss
@@ -7,7 +7,7 @@
     margin:0 -15px 20px;
 }
 
-.product-list__item{
+.product-list__item{//4 колонки на десктопе - по умолчанию
     @extend .g-column;
     margin-bottom:60px;
 
@@ -39,6 +39,34 @@
             clear:left;
         }
     }
+}
+
+.product-list--3col{//3 колонки на десктопе - для страницы с сайдбаром
+    .product-list__item{
+        @include media($desktop){
+            width:50%;
+            &:nth-child(2n+1){
+                clear:left;
+            }
+            &:nth-child(3n+1){
+                clear:none;
+            }
+        }
+
+        @include media($large){
+            width:(100%)/3;
+            &:nth-child(2n+1){
+                clear:none;
+            }
+            &:nth-child(4n+1){
+                clear:none;
+            }
+            &:nth-child(3n+1){
+                clear:left;
+            }
+        }
+    }
+
 }
 
 .product-list__inner{
