Catalog Page added

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -9,7 +9,7 @@
 @import "modules/utilities";
 //@import "modules/grid";
 @import "modules/button";
-//@import "modules/forms";
+@import "modules/forms";
 //@import "modules/tables";
 
 //typography
