--- a/src/sass/partials/header/_header-search.scss
+++ b/src/sass/partials/header/_header-search.scss
@@ -46,6 +46,7 @@
     &:active,
     &:focus{
         border-color:$primary;
+        box-shadow:inset 0 0 4px rgba($primary, .8);
         outline:0;
     }
 }
