--- a/src/sass/partials/product/_product-list.scss
+++ b/src/sass/partials/product/_product-list.scss
@@ -208,6 +208,7 @@
     &:active,
     &:focus{
         border-color:$primary-alt;
+        box-shadow:inset 0 0 3px rgba($primary-alt, .8);
         outline:0;
     }
 }
