--- a/src/sass/partials/sidebar/_priceslider.scss
+++ b/src/sass/partials/sidebar/_priceslider.scss
@@ -33,6 +33,7 @@
     &:active,
     &:focus{
         border-color:$primary;
+        box-shadow:inset 0 0 4px rgba($primary, .8);
         outline:0;
     }
 }
