--- a/src/sass/partials/_page.scss
+++ b/src/sass/partials/_page.scss
@@ -11,9 +11,19 @@
     @extend .g-column;
 }
 
-@include media($desktop){
+@include media($small){
     .page__main{
         float:right;
+        width:50%;
+    }
+    .page__side{
+        width:50%;
+    }
+}
+
+@include media($desktop){
+    .page__main{
+        //float:right;
         width:2*(100%)/3;
     }
     .page__side{
