--- a/src/sass/modules/_main.scss
+++ b/src/sass/modules/_main.scss
@@ -41,6 +41,13 @@ html{
     background:url(../img/page-bg.png) left bottom repeat-x;
 }
 
+.page__article{
+    margin-bottom:30px;
+    @include font-size($project-font-size);
+    line-height:1.86;
+    color:$text-color-light;
+}
+
 /* Typography*/
 .g-brand-color{
     color:$primary-text-color;
@@ -68,6 +75,38 @@ b, strong{
     list-style-type:none;
     margin:0;
     padding:0;
+}
+
+.styled-ol-list{
+    counter-reset: li; 
+    list-style: none; 
+    padding: 0;
+
+    li{
+        position:relative;
+        padding-left:45px;
+        margin-bottom:20px;
+    }
+
+    li:after{
+        content: counter(li);
+        counter-increment: li;
+        position:absolute;
+        top:-1px; left:8px;
+        @include font-size(14px);
+        color:#fff;
+    }
+
+    li:before{
+        content:'';
+        display:block;
+        @include size(24px);
+        border-radius:50%;
+        background:$primary;
+        position:absolute;
+        top:0;
+        left:0;
+    }
 }
 
 
