--- a/src/sass/partials/page/_title.scss
+++ b/src/sass/partials/page/_title.scss
@@ -14,10 +14,11 @@ h1, h2, h3, h4, h5, h6, .g-title, .g-subtitle{
 
 .g-subtitle{
     display:block;
-    @include font-size(18px);
+    @include font-size(24px);
 }
 
 .g-title--line{
+    margin-bottom:45px;
     position:relative;
     z-index:1;
     &:before,
