--- a/src/sass/partials/product/_product-list.scss
+++ b/src/sass/partials/product/_product-list.scss
@@ -43,16 +43,13 @@
 
 .product-list--3col{//3 колонки на десктопе - для страницы с сайдбаром
     .product-list__item{
-        @include media($small){//на этом разрешении, слева покажем сайдбар с фильтрами
-            width:100%;
-            &:nth-child(2n+1){
-                clear:none;
-            }
-        }
         @include media($desktop){
             width:50%;
             &:nth-child(3n+1){
                 clear:none;
+            }
+            &:nth-child(2n+1){
+                clear:left;
             }
         }
 
@@ -115,6 +112,7 @@
 }
 .product-list__img{
     @extend .g-img-centered;
+    max-height:96%;
     @include backface-visibility(hidden);
     @include transition(opacity .3s ease);
 }
