--- a/src/sass/partials/product/_sorter.scss
+++ b/src/sass/partials/product/_sorter.scss
@@ -3,6 +3,10 @@
 .b-sorter{
     @extend .g-clearfix;
     margin:0 -15px 25px;
+
+    @include media($large){
+        margin-bottom:0;
+    }
 }
 .b-sorter__title,
 .b-sorter__inner{
