--- a/src/sass/partials/sidebar/_sidebar-panel.scss
+++ b/src/sass/partials/sidebar/_sidebar-panel.scss
@@ -2,9 +2,14 @@
 /*Sidebar Panel Block*/
 .side-panel{
     @extend .product-list__inner;
-    max-width:750px;
+    max-width:370px;
     padding:10px 15px 20px;
-    margin-bottom:60px;
+    margin:0 auto 60px;
+
+    @include media($small){
+        max-width:none;
+        margin:0 0 60px;
+    }
 }
 
 .side-title{
