--- a/src/sass/partials/page/_advantages.scss
+++ b/src/sass/partials/page/_advantages.scss
@@ -15,6 +15,22 @@
         max-width:none;
         margin:75px 0;
     }
+
+    @include media($extra-large){
+        position:relative;
+        box-shadow:0 5px 1px rgba($primary, .6);
+
+        &:before{
+            content:'';
+            display:block;
+            height:35px;
+            background:url(../img/curve-bg.png) no-repeat;
+            background-size:contain;
+            position:absolute;
+            top:-30px;
+            left:-1px; right:-1px;
+        }
+    }
 }
 
 .b-advantages__row{
@@ -36,6 +52,10 @@
     top:-40px;
     left:50%;
     margin-left:-105px;
+
+    @include media($extra-large){
+        top:-45px;
+    }
 }
 .b-advantages__subtitle{
     display:block;
