--- a/src/sass/partials/page/_news-list.scss
+++ b/src/sass/partials/page/_news-list.scss
@@ -17,23 +17,13 @@
     border-radius:$border-radius;
     box-shadow:0 5px 1px rgba($primary, .6), inset 0 0 1px rgba(#000, .2);
     background:#fff;
-    //position:relative;
-
-    //&:before{
-        //content:'';
-        //display:block;
-        //padding-top:56%;//карман для картинки, к которой применим svg clip-path
-    //}
+    overflow:hidden;
 }
 .news-list__thumb{
     display:block;
     margin-bottom:10px;
     background:#bbb;
-    //position:absolute;
     position:relative;
-    //left:0;
-    //top:-50px;
-    //width:100%;
 
     &:after{
         content:'';
