Product page started

--- a/src/sass/partials/_product.scss
+++ b/src/sass/partials/_product.scss
@@ -3,3 +3,8 @@
 @import "product/_rating.scss";
 @import "product/_product-list.scss";//вывод продуктов в каталоге
 @import "product/_sorter.scss";//блок Заголовок страницы + сортировка товаров
+
+@import "product/_single-product-grid.scss";
+@import "product/_single-product-gallery.scss";
+@import "product/_single-product-description.scss";
+@import "product/_single-product-additional-info.scss";
