--- a/src/sass/partials/product/_rating.scss
+++ b/src/sass/partials/product/_rating.scss
@@ -2,28 +2,29 @@
 /*Product Rating*/
 .b-rating{
     display:inline-block;
-    width:116px;
+    width:108px;
     height:16px;
     vertical-align:middle;
-    background:#fff url(../img/sprite.png) no-repeat;
+    background-image:url(../img/sprite.png);
+    background-repeat:no-repeat;
 }
 .b-rating--5{
-    background-position:4px -240px;
+    background-position:0 -240px;
 }
 
 .b-rating--4{
-    background-position:4px -260px;
+    background-position:0 -260px;
 }
 .b-rating--3{
-    background-position:4px -280px;
+    background-position:0 -280px;
 }
 
 .b-rating--2{
-    background-position:4px -300px;
+    background-position:0 -300px;
 }
 
 .b-rating--1{
-    background-position:4px -320px;
+    background-position:0 -320px;
 }
 
 .b-rating__inner{
