Product description with micro-data added

--- a/src/sass/partials/product/_product-list.scss
+++ b/src/sass/partials/product/_product-list.scss
@@ -147,7 +147,7 @@
     color:#847c80;
 }
 
-.product-list__rating{
+.product-list__rating{//делаем его шире, добавляем белый фон чтобы скрыть полоски под ним
     height:16px;
     margin-bottom:10px;
     text-align:center;
