--- a/src/sass/modules/_typography.scss
+++ b/src/sass/modules/_typography.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800,700,600,400italic&subset=latin,cyrillic);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,600,700&subset=latin,cyrillic);
 
 @font-face {
     font-family: 'Monotype-Corsiva-Regular';
