--- a/src/sass/partials/_product.scss
+++ b/src/sass/partials/_product.scss
@@ -8,3 +8,4 @@
 @import "product/_single-product-gallery.scss";
 @import "product/_single-product-description.scss";
 @import "product/_single-product-additional-info.scss";
+@import "product/_single-product-review.scss";
