--- a/src/sass/partials/product/_single-product-additional-info.scss
+++ b/src/sass/partials/product/_single-product-additional-info.scss
@@ -1,2 +1,16 @@
 ﻿@import "../../modules/_base.scss";
 /*Product Page Additional Info*/
+.b-addon{
+    .side-panel{
+        @include font-size(13px);
+        font-weight:300;
+        max-width:none;
+    }
+
+    b, strong{
+        font-weight:600;
+    }
+    p, ul, ol{
+        margin-bottom:12px;
+    }
+}
