modal windows to Product Page added

--- a/src/sass/modules/_bootstrap-mods.scss
+++ b/src/sass/modules/_bootstrap-mods.scss
@@ -15,6 +15,10 @@ a{
     }
 }
 
+.modal-header .close{
+    outline:none;
+}
+
 .dropdown-menu{
     border-radius:$border-radius;
     padding-top:15px;
