--- a/src/sass/modules/_forms.scss
+++ b/src/sass/modules/_forms.scss
@@ -20,7 +20,7 @@ textarea {
     vertical-align:middle;
     width:100%;
     @include px2rem(margin-bottom, $project-font-size);
-    @include px2rem(padding, 0 10px);
+    @include px2rem(padding, 6px 10px);
     background-color: #fff;
     border: 1px solid $border-color;
     border-radius:2px;
