Slider to Product page added

--- a/src/sass/partials/_product.scss
+++ b/src/sass/partials/_product.scss
@@ -9,3 +9,5 @@
 @import "product/_single-product-description.scss";
 @import "product/_single-product-additional-info.scss";
 @import "product/_single-product-review.scss";
+
+@import "product/_product-slider.scss";//слайдер с товарами
