--- a/src/sass/partials/_page.scss
+++ b/src/sass/partials/_page.scss
@@ -37,6 +37,7 @@
 @import "page/_service-list.scss";//список услуг
 @import "page/_advantages.scss";//преимущества
 @import "page/_news-list.scss";//последние новости (колонки)
+@import "page/_news-feed.scss";//последние новости (список)
 @import "page/_seo.scss";//SEO-блок
 @import "page/_hiro-form.scss";//Заголовок с формой заявки
 @import "page/_slider.scss";
