Contacts page added

--- a/src/sass/partials/_page.scss
+++ b/src/sass/partials/_page.scss
@@ -40,7 +40,7 @@
 @import "page/_news-feed.scss";//последние новости (список)
 @import "page/_seo.scss";//SEO-блок
 @import "page/_hiro-form.scss";//Заголовок с формой заявки
-@import "page/_slider.scss";
+@import "page/_contacts.scss";//Страница Контакты
 
 @import "page/_scroll-up.scss";
 
