Parent page for catalog added

--- a/src/sass/partials/product/_product-list.scss
+++ b/src/sass/partials/product/_product-list.scss
@@ -308,3 +308,13 @@
 }
 
 
+/*Short Product List*/
+.product-list--short{//для блоков каталога родительской страницы
+    .product-list__caption{
+        height:auto;
+        &:after{
+            display:none;
+        }
+    }
+}
+
