--- a/src/sass/modules/_bootstrap-mods.scss
+++ b/src/sass/modules/_bootstrap-mods.scss
@@ -63,3 +63,10 @@ a{
         right:15px;
     }
 }
+
+
+@media screen and (max-width: 767px){
+    .table-responsive {
+        border:1px dashed #eee;
+    }
+}
