--- a/src/sass/partials/_product.scss
+++ b/src/sass/partials/_product.scss
@@ -11,3 +11,6 @@
 @import "product/_single-product-review.scss";
 
 @import "product/_product-slider.scss";//слайдер с товарами
+
+@import "product/_cart.scss";//корзина (страница)
+@import "product/_cart-slider.scss";//слайдер товаров в корзине
