Checkout page created

--- a/src/sass/partials/_product.scss
+++ b/src/sass/partials/_product.scss
@@ -14,3 +14,4 @@
 
 @import "product/_cart.scss";//корзина (страница)
 @import "product/_cart-slider.scss";//слайдер товаров в корзине
+@import "product/_checkout.scss";//страница оформления заказа
