Basic cabinet page added

--- a/src/sass/partials/_product.scss
+++ b/src/sass/partials/_product.scss
@@ -15,3 +15,5 @@
 @import "product/_cart.scss";//корзина (страница)
 @import "product/_cart-slider.scss";//слайдер товаров в корзине
 @import "product/_checkout.scss";//страница оформления заказа
+
+@import "product/_cabinet.scss";//персональный кабинет - типовая страница
